--- a/app/src/main/res/layout/fragment_change_password_page.xml
+++ b/app/src/main/res/layout/fragment_change_password_page.xml
@@ -5,6 +5,22 @@
     android:layout_height="match_parent"
     tools:context=".changePasswordPage">
 
+    <Button
+        android:id="@+id/backToProfilePageButton"
+        android:layout_width="60dp"
+        android:layout_height="wrap_content"
+        android:layout_alignParentStart="true"
+        android:layout_alignParentTop="true"
+        android:layout_centerHorizontal="true"
+        android:layout_marginStart="30dp"
+        android:layout_marginTop="42dp"
+        android:layout_marginEnd="50dp"
+        android:backgroundTint="@color/white"
+        android:drawableLeft="@drawable/ic_baseline_black_arrow_back_24"
+        android:fontFamily="@font/poppins_semibold"
+        android:textColor="@color/pastel_red"
+        android:textSize="14sp" />
+
     <TextView
         android:id="@+id/changePasswordTitle"
         android:layout_width="247dp"
@@ -32,6 +48,7 @@
         android:layout_marginTop="-40dp"
         android:fontFamily="@font/poppins"
         android:gravity="left"
+        android:textColor="@color/black"
         android:text="Enter a new password below to change your password."
         android:textSize="18sp" />
 
@@ -45,24 +62,10 @@
         android:layout_marginTop="30dp"
         android:fontFamily="@font/poppins_semibold"
         android:gravity="left"
-        android:text="Password"
+        android:text="New Password"
         android:textSize="16sp" />
 
-    <EditText
-        android:id="@+id/newPassword"
-        android:layout_width="356dp"
-        android:layout_height="wrap_content"
-        android:layout_below="@id/passwordTitle"
-        android:layout_alignParentStart="true"
-        android:layout_marginLeft="30dp"
-        android:background="@drawable/field"
-        android:drawablePadding="20dp"
-        android:layout_marginTop="-10dp"
-        android:hint="Password"
-        android:minHeight="48dp"
-        android:padding="10dp"
-        android:textColorHint="@color/pastel_red"
-        android:textSize="16sp" />
+
 
     <TextView
         android:id="@+id/newPasswordTitle"
@@ -77,21 +80,6 @@
         android:text="Re-enter new password"
         android:textSize="16sp" />
 
-    <EditText
-        android:id="@+id/reEnteredPassword"
-        android:layout_width="356dp"
-        android:layout_height="wrap_content"
-        android:layout_below="@id/newPasswordTitle"
-        android:layout_alignParentStart="true"
-        android:layout_marginLeft="30dp"
-        android:background="@drawable/field"
-        android:drawablePadding="20dp"
-        android:layout_marginTop="-10dp"
-        android:hint="Password"
-        android:minHeight="48dp"
-        android:padding="10dp"
-        android:textColorHint="@color/pastel_red"
-        android:textSize="16sp" />
 
     <Button
         android:id="@+id/resetPasswordButton"
@@ -104,11 +92,12 @@
         android:backgroundTint="@color/pastel_red"
         android:fontFamily="@font/poppins_semibold"
         android:text="RESET PASSWORD"
+        android:textColor="@color/white"
         android:textSize="14sp"
         />
 
     <Button
-        android:id="@+id/returnToLoginPageButton"
+        android:id="@+id/returnToProfilePageButtonPageButton"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_below="@id/reEnteredPassword"
@@ -119,6 +108,43 @@
         android:text="CANCEL"
         android:textColor="@color/pastel_red"
         android:textSize="14sp" />
+
+    <EditText
+        android:id="@+id/newPassword"
+        android:layout_width="356dp"
+        android:layout_height="wrap_content"
+        android:layout_below="@id/passwordTitle"
+        android:layout_alignParentStart="true"
+        android:layout_marginStart="30dp"
+        android:background="@drawable/white_field"
+        android:ems="10"
+        android:inputType="textPassword"
+        android:layout_marginLeft="30dp"
+        android:layout_marginTop="-11dp"
+        android:hint="Password"
+        android:textColorHint="@color/pastel_red"
+        android:drawablePadding="20dp"
+        android:minHeight="48dp"
+        android:padding="10dp"
+        android:textSize="16sp" />
+
+    <EditText
+        android:ems="10"
+        android:inputType="textPassword"
+        android:id="@+id/reEnteredPassword"
+        android:layout_width="356dp"
+        android:layout_height="wrap_content"
+        android:layout_below="@id/newPasswordTitle"
+        android:layout_alignParentStart="true"
+        android:hint="Password"
+        android:background="@drawable/white_field"
+        android:textColorHint="@color/pastel_red"
+        android:layout_marginLeft="30dp"
+        android:drawablePadding="20dp"
+        android:layout_marginTop="-10dp"
+        android:minHeight="48dp"
+        android:padding="10dp"
+        android:textSize="16sp"/>
 
 
 </RelativeLayout>
