--- a/app/src/main/res/layout/fragment_customer_support_page.xml
+++ b/app/src/main/res/layout/fragment_customer_support_page.xml
@@ -15,7 +15,6 @@
         android:layout_alignParentTop="true"
         android:layout_marginStart="30dp"
         android:layout_marginTop="70dp"
-        android:layout_marginEnd="50dp"
         android:layout_marginRight="35dp"
         android:layout_marginBottom="50dp"
         android:fontFamily="@font/poppins_semibold"
@@ -38,11 +37,11 @@
 
     <ImageView
         android:id="@+id/customerSupportView"
+        android:layout_below="@id/customerSupportTitle"
         android:layout_width="171dp"
         android:layout_height="131dp"
-        android:layout_alignParentTop="true"
         android:layout_centerHorizontal="true"
-        android:layout_marginTop="117dp"
+        android:layout_marginTop="-40dp"
         android:src="@drawable/ic_customer_support" />
 
     <TextView
@@ -51,11 +50,8 @@
         android:layout_below="@id/customerSupportView"
         android:layout_height="40dp"
         android:layout_alignParentStart="true"
-        android:layout_alignParentTop="true"
-        android:layout_marginStart="50dp"
-        android:layout_marginTop="280dp"
-        android:layout_marginEnd="50dp"
-        android:layout_marginRight="35dp"
+        android:layout_marginStart="30dp"
+        android:layout_marginTop="20dp"
         android:layout_marginBottom="50dp"
         android:fontFamily="@font/poppins_semibold"
         android:gravity="left"
@@ -64,15 +60,13 @@
 
     <EditText
         android:id="@+id/name"
-        android:layout_width="match_parent"
+        android:layout_width="354dp"
         android:layout_height="wrap_content"
         android:layout_below="@id/nameTitle"
         android:layout_alignParentStart="true"
-        android:layout_alignParentTop="true"
-        android:layout_marginLeft="40dp"
-        android:layout_marginTop="305dp"
-        android:layout_marginRight="35dp"
-        android:background="@drawable/field"
+        android:layout_marginLeft="30dp"
+        android:layout_marginTop="-60dp"
+        android:background="@drawable/white_field"
         android:drawablePadding="20dp"
         android:hint="Name"
         android:minHeight="48dp"
@@ -84,14 +78,12 @@
         android:id="@+id/emailTitle"
         android:layout_width="150dp"
         android:layout_below="@id/name"
+
         android:layout_height="40dp"
         android:layout_alignParentStart="true"
-        android:layout_alignParentTop="true"
-        android:layout_marginStart="50dp"
-        android:layout_marginTop="360dp"
-        android:layout_marginEnd="50dp"
+        android:layout_marginStart="30dp"
+        android:layout_marginTop="10dp"
         android:layout_marginRight="35dp"
-        android:layout_marginBottom="50dp"
         android:fontFamily="@font/poppins_semibold"
         android:gravity="left"
         android:text="Email"
@@ -99,18 +91,15 @@
 
     <EditText
         android:id="@+id/email"
-        android:layout_width="match_parent"
+        android:layout_width="352dp"
         android:layout_height="wrap_content"
-        android:layout_below="@id/nameTitle"
+        android:layout_below="@id/emailTitle"
         android:layout_alignParentStart="true"
-        android:layout_alignParentTop="true"
-        android:layout_marginLeft="40dp"
-        android:layout_marginTop="385dp"
-        android:layout_marginRight="35dp"
-        android:background="@drawable/field"
+        android:layout_marginLeft="30dp"
+        android:layout_marginTop="-10dp"
+        android:background="@drawable/white_field"
         android:drawablePadding="20dp"
         android:hint="Email"
-        android:minHeight="48dp"
         android:padding="10dp"
         android:textColorHint="@color/pastel_red"
         android:textSize="16sp" />
@@ -121,12 +110,9 @@
         android:layout_below="@id/email"
         android:layout_height="40dp"
         android:layout_alignParentStart="true"
-        android:layout_alignParentTop="true"
-        android:layout_marginStart="50dp"
-        android:layout_marginTop="440dp"
+        android:layout_marginStart="30dp"
+        android:layout_marginTop="10dp"
         android:layout_marginEnd="50dp"
-        android:layout_marginRight="35dp"
-        android:layout_marginBottom="50dp"
         android:fontFamily="@font/poppins_semibold"
         android:gravity="left"
         android:text="Contact Number"
@@ -134,15 +120,13 @@
 
     <EditText
         android:id="@+id/contactNumber"
-        android:layout_width="match_parent"
+        android:layout_width="352dp"
         android:layout_height="wrap_content"
         android:layout_below="@id/contactTitle"
         android:layout_alignParentStart="true"
-        android:layout_alignParentTop="true"
-        android:layout_marginLeft="40dp"
-        android:layout_marginTop="465dp"
-        android:layout_marginRight="35dp"
-        android:background="@drawable/field"
+        android:layout_marginLeft="30dp"
+        android:layout_marginTop="-10dp"
+        android:background="@drawable/white_field"
         android:drawablePadding="20dp"
         android:hint="Contact Number"
         android:minHeight="48dp"
@@ -156,11 +140,9 @@
         android:layout_below="@id/contactNumber"
         android:layout_height="40dp"
         android:layout_alignParentStart="true"
-        android:layout_alignParentTop="true"
-        android:layout_marginStart="50dp"
-        android:layout_marginTop="520dp"
+        android:layout_marginStart="30dp"
+        android:layout_marginTop="10dp"
         android:layout_marginEnd="50dp"
-        android:layout_marginRight="35dp"
         android:layout_marginBottom="50dp"
         android:fontFamily="@font/poppins_semibold"
         android:gravity="left"
@@ -169,15 +151,13 @@
 
     <EditText
         android:id="@+id/problemDescription"
-        android:layout_width="match_parent"
+        android:layout_width="351dp"
         android:layout_height="wrap_content"
         android:layout_below="@id/problemTitle"
         android:layout_alignParentStart="true"
-        android:layout_alignParentTop="true"
-        android:layout_marginLeft="40dp"
-        android:layout_marginTop="545dp"
-        android:layout_marginRight="35dp"
-        android:background="@drawable/field"
+        android:layout_marginLeft="30dp"
+        android:layout_marginTop="-60dp"
+        android:background="@drawable/white_field"
         android:drawablePadding="20dp"
         android:hint="Describe your problem here."
         android:minHeight="48dp"
@@ -196,6 +176,7 @@
         android:fontFamily="@font/poppins_semibold"
         android:text="SUBMIT"
         android:textSize="14sp"
+        android:textColor="@color/white"
         />
 
 </RelativeLayout>
