--- a/app/src/main/res/layout/fragment_login_page.xml
+++ b/app/src/main/res/layout/fragment_login_page.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@drawable/onboarding_bg"
+    android:background="@drawable/onboarding_bg_with_tint"
 
     tools:context=".loginPage">
 
@@ -22,6 +22,7 @@
         android:gravity="center_horizontal|top"
         android:text="Bit by Bit"
         android:textAlignment="center"
+        android:textColor="@color/black"
         android:textSize="56sp" />
 
     <TextView
@@ -37,6 +38,7 @@
         android:text="User Login"
         android:textAlignment="center"
         android:textSize="20sp"
+        android:textColor="@color/black"
         />
 
     <EditText
@@ -49,7 +51,7 @@
         android:layout_marginLeft="35dp"
         android:layout_marginTop="390dp"
         android:layout_marginRight="35dp"
-        android:background="@drawable/field"
+        android:background="@drawable/white_field"
         android:drawableStart="@drawable/ic_baseline_person_outline_24"
         android:drawablePadding="20dp"
         android:hint="Username"
@@ -67,7 +69,7 @@
         android:layout_marginLeft="35dp"
         android:layout_marginTop="20dp"
         android:layout_marginRight="35dp"
-        android:background="@drawable/field"
+        android:background="@drawable/white_field"
         android:drawableStart="@drawable/ic_baseline_password_24"
         android:drawablePadding="20dp"
         android:hint="Password"
@@ -87,6 +89,7 @@
         android:fontFamily="@font/poppins_semibold"
         android:text="Login"
         android:textSize="14sp"
+        android:textColor="@color/white"
         app:backgroundTint="#DF8892" />
 
     <Button
@@ -96,7 +99,7 @@
         android:layout_marginLeft="35dp"
         android:layout_below="@id/password"
         android:layout_marginTop="14dp"
-        android:fontFamily="@font/poppins"
+        android:fontFamily="@font/poppins_semibold"
         android:text="Forgot Password"
         android:background="#00000000"
         android:textColor="@color/white"
@@ -110,7 +113,7 @@
         android:layout_marginLeft="220dp"
         android:layout_below="@id/password"
         android:layout_marginTop="14dp"
-        android:fontFamily="@font/poppins"
+        android:fontFamily="@font/poppins_semibold"
         android:text="Register Account"
         android:background="#00000000"
         android:textSize="12sp"
