--- a/app/src/main/res/layout/fragment_profile_page.xml
+++ b/app/src/main/res/layout/fragment_profile_page.xml
@@ -21,6 +21,7 @@
         android:fontFamily="@font/poppins_semibold"
         android:gravity="left"
         android:text="My Profile"
+        android:textColor="@color/black"
         android:textSize="20sp"
         />
 
@@ -91,36 +92,29 @@
         android:layout_below="@id/profileImage"
         android:layout_marginStart="30dp"
         android:layout_marginTop="20dp"
-        android:layout_marginEnd="50dp"
-        android:layout_marginRight="35dp"
-        android:layout_marginBottom="50dp"
         android:fontFamily="@font/poppins_semibold"
         android:gravity="left"
-        android:text="@string/app_name"
-        android:textSize="20sp"
+        android:text="Sarah Alexander"
+        android:textColor="@color/black"
+        android:textSize="18sp"
         />
-    <!--        at line 86, change @string/app_name to user_name -->
 
     <TextView
         android:id="@+id/userBio"
-        android:layout_width="247dp"
+        android:layout_width="340dp"
         android:layout_height="40dp"
-        android:layout_alignParentStart="true"
         android:layout_below="@id/name"
+        android:layout_alignParentStart="true"
         android:layout_marginStart="30dp"
-        android:layout_marginTop="-50dp"
-        android:layout_marginEnd="50dp"
-        android:layout_marginRight="35dp"
         android:layout_marginBottom="50dp"
         android:fontFamily="@font/poppins"
         android:gravity="left"
-        android:text="@string/app_name"
-        android:textSize="18sp"
-        />
+        android:text="A girl who likes to travel and eat."
+        android:textSize="14dp" />
     <!--        at line 104, change @string/app_name to user_bio -->
 
     <Button
-        android:id="@+id/registerButton"
+        android:id="@+id/gotoAchievementsPageButton"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_below="@id/userBio"
@@ -128,10 +122,9 @@
         android:layout_marginLeft="30dp"
         android:backgroundTint="@color/pastel_red"
         android:fontFamily="@font/poppins"
-        android:text="EXERCISES"
+        android:text="ACHIEVEMENTS"
         android:layout_marginTop="-20dp"
         android:textColor="@color/white"
-        android:drawableLeft="@drawable/ic_baseline_white_run_24"
         android:textSize="14sp"
         />
 
@@ -150,5 +143,71 @@
         android:drawableLeft="@drawable/ic_baseline_white_view_list_24"
         android:textColor="@color/white"
         />
+
+    <TextView
+        android:id="@+id/currentWeightText"
+        android:layout_width="247dp"
+        android:layout_height="40dp"
+        android:layout_alignParentStart="true"
+        android:layout_below="@id/gotoAchievementsPageButton"
+        android:layout_marginStart="30dp"
+        android:layout_marginTop="20dp"
+        android:fontFamily="@font/poppins_semibold"
+        android:gravity="left"
+        android:text="Current Weight"
+        android:textSize="18sp"
+        />
+
+
+    <LinearLayout
+        android:layout_width="353dp"
+        android:layout_height="132dp"
+        android:layout_below="@id/currentWeightText"
+        android:layout_marginLeft="30dp"
+        android:layout_marginRight="30dp"
+        android:background="@drawable/rectangle"
+        android:orientation="horizontal">
+
+        <TextView
+            android:id="@+id/currentWeight"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_below="@id/currentWeightText"
+            android:layout_marginStart="100dp"
+            android:layout_marginTop="25dp"
+            android:fontFamily="@font/poppins_semibold"
+            android:gravity="left"
+            android:text="67"
+            android:textColor="@color/pastel_red"
+            android:textSize="50sp" />
+
+        <TextView
+            android:id="@+id/kgText"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_alignRight="@id/currentWeight"
+            android:layout_marginLeft="20dp"
+            android:fontFamily="@font/poppins"
+            android:gravity="left"
+            android:text="Kg"
+            android:textColor="@color/black"
+            android:textSize="20sp" />
+
+        <Button
+            android:id="@+id/editProgressButton"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:gravity="right"
+            android:layout_marginLeft="30dp"
+            android:backgroundTint="@color/white"
+            android:fontFamily="@font/poppins_semibold"
+            android:layout_marginTop="-20dp"
+            android:drawableLeft="@drawable/ic_baseline_pastel_red_edit_24"
+            android:text="Edit"
+            android:textColor="@color/pastel_red"
+            android:textSize="14sp"
+            />
+
+    </LinearLayout>
 
 </RelativeLayout>
