--- a/app/src/main/res/layout/fragment_register_page.xml
+++ b/app/src/main/res/layout/fragment_register_page.xml
@@ -12,13 +12,14 @@
         android:layout_height="40dp"
         android:layout_alignParentStart="true"
         android:layout_alignParentTop="true"
-        android:layout_marginStart="30dp"
-        android:layout_marginTop="170dp"
+        android:layout_marginStart="35dp"
+        android:layout_marginTop="191dp"
         android:layout_marginEnd="50dp"
         android:layout_marginBottom="50dp"
         android:fontFamily="@font/poppins_semibold"
         android:gravity="left"
         android:text="Register"
+        android:textColor="@color/black"
         android:textSize="20sp" />
 
     <TextView
@@ -162,13 +163,28 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_below="@id/emailconfirmation"
-        android:layout_centerHorizontal="true"
+        android:gravity="left"
         android:layout_marginTop="20dp"
+        android:layout_marginStart="40dp"
         android:backgroundTint="@color/pastel_red"
         android:fontFamily="@font/poppins_semibold"
-        android:text="register"
+        android:text="REGISTER ACCOUNT"
+        android:textColor="@color/white"
         android:textSize="14sp"
         />
+
+    <Button
+        android:id="@+id/returnToLoginPageButton"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_below="@id/emailconfirmation"
+        android:layout_marginTop="20dp"
+        android:layout_marginLeft="290dp"
+        android:backgroundTint="@color/white"
+        android:fontFamily="@font/poppins_semibold"
+        android:text="CANCEL"
+        android:textColor="@color/pastel_red"
+        android:textSize="14sp" />
 
 
 
